changed font-size for mobile, and fixed the javascript for nav-collapse

--- a/app/assets/stylesheets/customers.scss
+++ b/app/assets/stylesheets/customers.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the Customers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-input, textarea, button, .uneditable-input {
+input, textarea, .uneditable-input {
   border: 1px solid #bbb;
   width: 50%;
   margin-bottom: 15px;
@@ -30,6 +30,7 @@ label {
 }
 
 .btn-primary {
+  width: 50%;
   font-size: 20px;
 }
 
