--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -153,40 +153,14 @@ p {
   color: green;
 }
 
-// .overlay {
-// position:absolute;
-// width:100%;
-// height:100%;
-// background-color: black;
-// opacity: 0.6;
-// }
-
 .how-it-works {
   padding-top: 10em;
   padding-bottom: 10em;
   color: lightgray;
 }
-//
-// .list-view {
-//   border-bottom: #8f8f8f solid 1px;
-//   display: table;
-//   width: 100%;
-//   margin: 0;
-// }
-//
-// .list-col-first {
-//   background: #E0E0E0;
-//   width: 6.666667%;
-//   display: table-cell;
-//   float: none;
-//   text-align: center;
-//   vertical-align: middle;
-//   font-size: 30px;
-// }
-//
-// .list-col-second {
-//   display: table-cell;
-//   float: none;
-//   width: 51.666667%;
-//   vertical-align: middle;
-// }
+
+@media screen and (max-width: 400px) {
+    .bb-name {
+      font-size: 60px;
+    }
+}
